--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "chart.js": "2.9.4",
     "core-js": "3.8.1",
     "echarts": "4.8.0",
+    "eslint-loader": "^4.0.2",
     "jsonwebtoken": "8.5.1",
     "leaflet": "1.6.0",
     "portal-vue": "2.1.7",
@@ -65,7 +66,6 @@
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.9",
-    "@vue/cli-plugin-eslint": "~4.5.9",
     "@vue/cli-plugin-router": "~4.5.9",
     "@vue/cli-plugin-vuex": "~4.5.9",
     "@vue/cli-service": "~4.5.9",
