--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bootstrap-vue": "2.21.1",
     "chart.js": "2.9.4",
     "core-js": "3.8.1",
+    "dotenv": "^8.2.0",
     "echarts": "4.8.0",
     "eslint-loader": "^4.0.2",
     "jsonwebtoken": "8.5.1",
@@ -72,6 +73,7 @@
     "@vue/eslint-config-airbnb": "^5.3.0",
     "@vuepress/plugin-medium-zoom": "^1.7.1",
     "babel-eslint": "^10.0.3",
+    "dotenv-webpack": "^7.0.2",
     "eslint": "6.8.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-vue": "6.2.2",
