--- a/package.json
+++ b/package.json
@@ -63,7 +63,8 @@
     "vue-tree-halower": "1.8.3",
     "vue2-leaflet": "2.5.2",
     "vuedraggable": "2.24.3",
-    "vuex": "3.6.0"
+    "vuex": "3.6.0",
+    "moment": "^2.28.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.9",
