--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VUE_APP_ROOT_HTTP=localhost
-VUE_APP_ROOT_API=http://localhost:1509/
+VUE_APP_ROOT_HTTP=antcvvcrm.herokuapp.com
+VUE_APP_ROOT_API=https://antcvvcrm.herokuapp.com/
