--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@vue/composition-api": "1.0.0-beta.22",
     "@vueuse/core": "4.0.0",
     "animate.css": "4.1.1",
+    "aos": "^3.0.0-beta.6",
     "apexcharts": "3.23.0",
     "axios": "0.21.1",
     "axios-mock-adapter": "1.19.0",
